tests/parse_print/random_perturb/enum_liberated/delete-06/stderr.expected
Error:
    tests/parse_print/random_perturb/enum_liberated/delete-06/delete-06.essence:13:10:
   |
13 | find k : 2
   |          ^
Unexpected 2

tests/parse_print/random_perturb/enum_liberated/delete-06/delete-06.essence:13:10:
   |
13 | find k : 2
   |          ^
Missing Domain
